[package]
name = "sexy"
version = "0.4.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.1", optional = true, features = ["aes"] }
anyhow = "1.0"
base64 = { version = "0.13.0", optional = true }
chrono = "0.4.24"
env_logger = "0.9"
libc = "0.2.133"
log = "0.4"
rand = { version = "0.8.5", optional = true }
regex = "1.5"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[features]
default = []
crypto = ["dep:aes-gcm", "dep:rand", "dep:base64"]

