[package]
name = "sexy"
version = "0.5.3"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.1", optional = true, features = ["aes"] }
anyhow = "1.0"
base64 = { version = "0.13.0", optional = true }
chrono = "0.4.24"
env_logger = "0.9"
lettre = { version = "0.10.4", features = ["native-tls"], optional = true }
libc = "0.2.133"
log = "0.4"
rand = "0.8.5"
regex = "1.5"
native-tls = { version = "0.2.11", features = ["vendored"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[features]
default = []
crypto = ["dep:aes-gcm", "dep:base64"]
mail = [ "dep:lettre" ]

